# songbook-gui

./: README.md  analysis_options.yaml  build_release.sh  pubspec.yaml
.github/workflows/: build.yml  build_release.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/functions/: set_name_dialog.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_localizations_uk.dart  app_ru.arb  app_ua.arb  app_uk.arb
lib/screens/: editor.dart  library.dart  settings.dart  song.dart
lib/services/: settings.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
linux/AppDir/: AppRun  songbook.desktop
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: library.rs  mod.rs  song.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_songbook.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_songbook.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build_apk.sh  build_appimage.sh  build_windows.bat
songbook-library/: Cargo.toml
songbook-library/src/: main.rs  tui.rs
src/core/: song_library.rs
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+22 files in other folders)
