[package]
name = "rust_lib_songbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
songbook = { version = "0.1.2", path = "../../songbook-tui", features = ["song_library"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
