[package]
name = "rust_lib_songbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
songbook = { version = "0.1.2", path = "../songbook-library", features = ["song_library"] }
flutter_rust_bridge = "=2.12.0"
anyhow = "1.0.102"
zip = "8.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
